01.Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: aspnetapp-replicas
spec:
    replicas: 3
    selector:
        matchLabels:
          app: aspnetapp
    template:
        metadata:
          labels:
              app: aspnetapp
        spec:
          containers:
          - name: aspnetapp
            image: drmoz/aspnetapp:v1
            ports:
              - containerPort: 80
