01.Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp-service
spec:
  selector:
    app: aspnetapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
      nodePort: 30080
  type: NodePort
